# server/src/main/java/fr/mightycode/cpoo/server/controller/DiscussionController.java
@@ -1,6 +1,5 @@
 package fr.mightycode.cpoo.server.controller;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -9,19 +8,16 @@ import org.springframework.web.bind.annotation.*;
 import fr.mightycode.cpoo.server.dto.DiscussionDTO;
 import fr.mightycode.cpoo.server.model.Discussion;
 import fr.mightycode.cpoo.server.service.DiscussionService;
+import lombok.RequiredArgsConstructor;
 
 import java.util.List;
 
 @RestController
 @RequestMapping("/discussions")
+@RequiredArgsConstructor
 public class DiscussionController {
 
     private final DiscussionService discussionService;
-
-    @Autowired
-    public DiscussionController(DiscussionService discussionService) {
-        this.discussionService = discussionService;
-    }
 
     @GetMapping("value = /{username}")
     public ResponseEntity<List<Discussion>> getDiscussionsForUser(@PathVariable String username) {
@@ -31,7 +27,7 @@ public class DiscussionController {
 
     @PostMapping(value = "create", consumes = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<Discussion> createDiscussion(@RequestBody final DiscussionDTO discussionDTO) {
-        Discussion discussion = discussionService.createDiscussion(discussionDTO.participants());
+        Discussion discussion = discussionService.createDiscussion(discussionDTO.user1(), discussionDTO.user2());
         return new ResponseEntity<>(discussion, HttpStatus.CREATED);
     }
 }
