# server/src/main/java/fr/mightycode/cpoo/server/dto/DiscussionDTO.java
@@ -1,7 +1,5 @@
 package fr.mightycode.cpoo.server.dto;
 
-import java.util.List;
-
-public record DiscussionDTO(long id, List<String> participants) {
+public record DiscussionDTO(long id, String user1, String user2) {
     
 }
